# v-campfire

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DATABASE.md  DESIGN_SYSTEM.md  DEVELOPMENT.md  PERFORMANCE.md  PRIVACY.md  RELEASE.md  ROADMAP.md  STATE.md  VISION.md
docs/adr/: 0001-use-tauri-over-electron.md  0002-use-sqlite-over-json-files.md  0003-unify-project-and-game-into-tracked-items.md  0004-trunk-based-development-over-gitflow.md  0005-skip-database-encryption-for-v1.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_initial.sql  0002_add_media_thumbnail.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src/app/: AmbientBackground.module.css  AmbientBackground.tsx  App.tsx  BottomDock.module.css  BottomDock.tsx  Sidebar.module.css  Sidebar.tsx
src/core/: router.tsx
src/core/audio/: AudioDriver.tsx  store.ts
src/core/db/: checklistItems.ts  client.ts  focusSessions.ts  journal.ts  mediaAssets.ts  stats.ts  stickyNotes.ts  trackedItems.ts
src/core/focus/: FocusTimerDriver.tsx  store.ts
src/core/media/: importImage.ts
src/core/utils/: dailyQuote.test.ts  dailyQuote.ts  date.test.ts  date.ts  greeting.test.ts  greeting.ts  progress.test.ts  progress.ts  streak.test.ts  streak.ts  time.test.ts  time.ts  (+1 more)
(+26 files in other folders)
